# image-search-demo

./: .env.example  .env.sample  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 7713e859bd59_initialize_database_schemas.py  d8866bb49359_initialize_database_schemas.py
assets/: Dockerfile  prepare_assets.py
hack/compose/: development.env  docker-compose.yaml
hack/download-pretrained/: download.py
src/: config.py  database.py  dependencies.py  exceptions.py  main.py
src/clip/: exceptions.py  service.py
src/image/: constants.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py  utils.py
src/interfaces/: clip.py  storage.py
src/storage/: exceptions.py  router.py  service_s3.py
src/utils/: uuid.py
