[tool.poetry]
name = "image-search-demo"
version = "0.1.0"
packages = [ {include = "src"}]
description = ""
authors = ["YC KAO <yckaokarl@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
torch = "^2.5.1"
transformers = "^4.47.1"
alembic = "^1.14.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pgvector = "^0.3.6"
pydantic = "^2.10.4"
loguru = "^0.7.3"
pydantic-settings = "^2.7.0"
aioboto3 = "^13.3.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
nanoid = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
black = "^24.10.0"
pylint = "^3.3.3"

[tool.pylint]
ignore = ["alembic", ".venv"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
max-line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
